feat: Implement single movie search

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="hero-body">
 				<div class="container">
 					<h1 class="title">
-						Movie Fight
+						Movie Comparing
 						<span class="icon">
 							<i class="fas fa-film"></i>
 						</span>
@@ -25,7 +25,9 @@
 				</div>
 			</div>
 		</section>
-		<div class="container"></div>
+		<div class="container">
+			<input />
+		</div>
 		<script src="index.js"></script>
 	</body>
 </html>
